[tool.poetry]
name = "nlp-apibot"
version = "0.1.0"
description = "This project builds a custom chatbot corpus using Google Search API, HTML parsing, and NLP techniques for enhanced responses."
authors = ["topogoogles <araujoagustin@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_apibot"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
nltk = "^3.8.1"
lxml = "^5.2.1"
beautifulsoup4 = "^4.12.3"
scikit-learn = "^1.4.2"
googlesearch-python = "^1.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
